# Green-Pass-Network-C

./: README.md
GREEN_PASS/src/: CMakeLists.txt  Shared.h
GREEN_PASS/src/centro-vaccinale/: CentroVaccinale.c
GREEN_PASS/src/clients/: ClientA.c  ClientS.c  ClientT.c
GREEN_PASS/src/server/: ServerG.c  ServerG.h  ServerV.c  ServerV.h
GREEN_PASS/src/wrapper/: Wrapper.c  Wrapper.h
